src/pages/Packages/packages.css
.package-box.skeleton {
  background: var(--lightgrey);
  border: 1px solid var(--lightgrey3);
  border-radius: 0.5rem;
  height: 36rem;
  width: 25rem;
  margin: 0.5rem;
  animation: skeleton 1s infinite alternate;
}

.package-box {
  width: 25rem;
}
.package-box.hidden {
  display: none !important;
}
.package-box .package-box-header {
  border-radius: 1rem 1rem 0 0;
  background: var(--pink);
  color: var(--white);
  width: 100%;
  text-align: center;
  padding: 1.5rem 2rem;
  font-size: 1.15rem;
}
.package-box .package-box-body {
  border-radius: 0 0 1rem 1rem;
  background: var(--dark2);
  padding: 2rem;
}
.package-box .package-box-body .limit-to-5-lines ul,
.package-box .package-box-body .limit-to-5-lines ol {
  list-style: revert !important;
  margin-left: 2rem;
}

.home-welcome-iframe {
  position: relative;
  top: -10rem;
}

@media screen and (max-width: 500px) {
  .package-box .package-box-header {
    padding: 1.5rem;
    text-align: left;
  }
  .banner {
    padding: 4rem 2rem;
  }
}

@media screen and (max-height: 950px) and (max-width: 420px) {
  .home-welcome-iframe {
    position: static;
    margin-bottom: 6rem;
  }
  .banner {
    height: 100%;
    max-height: 100%;
  }
}

